[package]
name = "chess-render"
version = "0.1.0"
edition = "2021"
description = "A configurable, embeddable chess GUI with UCI support and move validation."
license = "MIT"
authors = ["Himansh Mewada <himanshmewada06@atomicmail.io>"]
repository = "https://github.com/himanshm/chess-render"
readme = "README.md"
keywords = ["chess", "gui", "uci", "board", "render"]
categories = ["game-engines", "gui"]

[dependencies]
macroquad = "0.4"
chess = "3.2"

[features]
default = []
# Enable this feature to include UCI engine integration logic
uci = []
