[package]
name = "chess-render"
version = "0.3.3"
edition = "2021"
description = "A configurable, embeddable chess GUI with UCI support and move validation."
license = "MIT"
authors = ["Himansh Mewada <himanshmewada06@atomicmail.io>"]
repository = "https://github.com/himanshm/chess-render"
readme = "README.md"
keywords = ["chess", "gui", "uci", "board", "render"]
categories = ["game-engines", "gui"]

[dependencies]
chess = "3.2.0"
egui = "0.34.3"
egui-macroquad = "0.17.3"
env_logger = "0.11.10"
log = "0.4.33"
macroquad = "0.4.15"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
uci = "0.2.3"

[features]
default = []
uci = []
